--- a/GMO-JS-3/index.html
+++ b/GMO-JS-3/index.html
@@ -8,7 +8,6 @@
     <title>Bài tập 3</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
     <div class="container">
         <div class="wrap">
@@ -16,8 +15,8 @@
                 <ul class="content-message">
                 </ul>
                 <div class="controler">
-                    <button id="dam" onclick="dam()"><b>Đậm</b></button>
-                    <button id="nghieng" onclick="nghieng()"> <i>Nghiên</i> </button>
+                    <button id="dam" onclick="handleBoldOne()"><b>Đậm</b></button>
+                    <button id="nghieng" onclick="handleItalicOne()"> <i>Nghiên</i> </button>
                     <button id="reset" onclick="reset()">Reset</button>
                 </div>
                 <div class="send">
@@ -31,8 +30,8 @@
                 <ul class="content-message-2">
                 </ul>
                 <div class="controler">
-                    <button id="dam-2" onclick="dam2()" class=""><b>Đậm</b></button>
-                    <button id="nghieng-2" onclick="nghieng2()"> <i>Nghiên</i> </button>
+                    <button id="dam-2" onclick="handleBoldTwo()" class=""><b>Đậm</b></button>
+                    <button id="nghieng-2" onclick="handleItalicTwo()"> <i>Nghiên</i> </button>
                     <button id="reset-2" onclick="reset2()">Reset</button>
                 </div>
                 <div class="send">
@@ -46,5 +45,4 @@
     </div>
     <script src="./js/app.js"></script>
 </body>
-
 </html>
