--- a/GMO-JS-3/index.html
+++ b/GMO-JS-3/index.html
@@ -12,8 +12,10 @@
     <div class="container">
         <div class="wrap">
             <div class="message">
-                <ul class="content-message">
-                </ul>
+                <div class="content">
+                    <ul class="content-message">
+                    </ul>
+                </div>
                 <div class="controler">
                     <button id="dam" onclick="handleBoldOne()"><b>Đậm</b></button>
                     <button id="nghieng" onclick="handleItalicOne()"> <i>Nghiên</i> </button>
@@ -27,8 +29,10 @@
                 </div>
             </div>
             <div class="message">
-                <ul class="content-message-2">
-                </ul>
+                <div class="content">
+                    <ul class="content-message-2">
+                    </ul>
+                </div>
                 <div class="controler">
                     <button id="dam-2" onclick="handleBoldTwo()" class=""><b>Đậm</b></button>
                     <button id="nghieng-2" onclick="handleItalicTwo()"> <i>Nghiên</i> </button>
