--- a/GMO-JS-1/index.html
+++ b/GMO-JS-1/index.html
@@ -7,13 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bài tập 1</title>
     <link rel="stylesheet" href="./css/style.css">
-    <style>
-
-    </style>
 </head>
 
 <body>
-
     <div class="wrap">
         <div class="form">
             <form action="" method="" class="form__style" id="form-1">
@@ -35,7 +31,6 @@
                         oninput="handleInputRemove(event)" onkeypress="return isNumberKey(event)" value="">
                     <span class="form-message"> </span>
                 </div>
-
                 <div class="form-item">
                     <label class="text-input" for="birthday">Birthday:</label>
                     <input class="style-input" type="date" id="birthday" name="birthday" onblur="handleBlurRequired(event)"
@@ -54,24 +49,16 @@
                     onblur="handleBlurRequired(event)" oninput="handleInputConfirmPass(event)" value="">
                     <span class="form-message"> </span>
                 </div>
+                <div class="img-avt">
+                    <input type='file' id="inputimg" />
+                    <img class="img-ctl main" onclick="uploadAvt()" id="myimg"
+                        src="https://st.quantrimang.com/photos/image/2017/04/08/anh-dai-dien-FB-200.jpg" alt="">
+                </div>
+                <div class="btn">
+                    <button id="submit" method="post" name="submit" class="btn btn-primary">Add</button>
+                    <button type="reset" id="reset" method="post" class="btn btn-primary" onclick="reeset()">Reset</button>
+                </div>
             </form>
-        </div>
-        <div class="controls">
-            <div class="control__avtupload">
-                <input type='file' id="inputimg" />
-                <img class="img-ctl main" onclick="uploadAvt()"
-                    src="https://st.quantrimang.com/photos/image/2017/04/08/anh-dai-dien-FB-200.jpg" alt="">
-
-            </div>
-            <div class="controls-btn">
-                <div class="control__add">
-                    <button id="add" onclick="add()"> Add </button>
-                </div>
-                <div class="control__reset">
-                    <button id="reset" onclick="reset()"> Reset</button>
-                </div>
-            </div>
-
         </div>
         <div class="view">
             <div class="view_text">
@@ -93,16 +80,11 @@
                 </div>
             </div>
             <div class="view__avt">
-                <img class="img-ctl end" id="file"
+                <img class="img-ctl end" id="avata"
                     src="https://st.quantrimang.com/photos/image/2017/04/08/anh-dai-dien-FB-200.jpg" alt="">
-
             </div>
-
         </div>
     </div>
-
     <script src="./js/app.js"></script>
-
 </body>
-
 </html>
