--- a/GMO-JS-6/index.html
+++ b/GMO-JS-6/index.html
@@ -16,7 +16,7 @@
                 <thead>
                     <tr>
                         <th class="checkbox"> <input type="checkbox" class="checkAll" name="" value=""></th>
-                        <th class="name test"> Name</th>
+                        <th class="name"> Name</th>
                         <th class="phone"> Phone</th>
                         <th class="email"> Email</th>
                         <th class="action">Action</th>
@@ -43,9 +43,9 @@
             <div class="formAdd">
                 <div class="validate"> </div>
                 <div class="add">
-                    <span>Name <input type="text" name="name" value="" id="name"> </span>
-                    <span>Phone <input type="number" name="phone" value="" id='phone'></span>
-                    <span> Email<input type="text" name="email" value="" id="email"></span>
+                    <span>Name <input class="clear" type="text" name="name" value="" id="name"> </span>
+                    <span>Phone <input class="clear"  type="number" name="phone" value="" id='phone'></span>
+                    <span> Email<input class="clear"  type="text" name="email" value="" id="email"></span>
                 </div>
             </div>
         </div>
